[build-system]
build-backend = "cmeel"
requires = [
  "cmeel[build]",
  "eiquadprog >= 1.2.6, < 2",
  "pin[build] >=  3",
  "rhoban-cmeel-jsoncpp"
]

[project]
authors = [{ email = "team@rhoban.com", name = "Rhoban team" }]
classifiers = []
dependencies = [
  "eiquadprog >= 1.2.6, < 2",
  "pin >= 3",
  "rhoban-cmeel-jsoncpp",
  "meshcat",
  "ischedule"
]
description = "PlaCo: Rhoban Planning and Control"
license = "MIT"
name = "placo"
requires-python = ">= 3.9"
version = "0.7.0"

[project.urls]
changelog = "https://github.com/rhoban/placo/blob/main/CHANGELOG.md"
homepage = "https://placo.readthedocs.io/en/latest/"
repository = "https://github.com/rhoban/placo.git"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py39"

[tool.tomlsort]
all = true

[tool.cmeel]
run-tests = false
