[build-system]
build-backend = "cmeel"
requires = [
  "cmeel[build]",
  "eiquadprog >= 1.2.6, < 2",
  "pin[build] >=  3",
  "rhoban-cmeel-jsoncpp",
  "doxystub >= 0.0.13",
  "cmake<4"
]

[project]
authors = [{ email = "team@rhoban.com", name = "Rhoban team" }]
classifiers = []
dependencies = [
  "eiquadprog >= 1.2.6, < 2",
  "pin >= 3",
  "rhoban-cmeel-jsoncpp",
  "meshcat",
  "ischedule"
]
description = "PlaCo: Rhoban Planning and Control"
license = "MIT"
name = "placo"
requires-python = ">= 3.9"
version = "0.9.1"

[project.urls]
changelog = "https://github.com/rhoban/placo/blob/main/CHANGELOG.md"
homepage = "https://placo.readthedocs.io/en/latest/"
repository = "https://github.com/rhoban/placo.git"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py39"

[tool.tomlsort]
all = true

[tool.cmeel]
run-tests = false


[tool.cibuildwheel.macos]
before-all = "brew install --formula doxygen"

[tool.cibuildwheel.linux]
before-all = "yum install -y doxygen"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add doxygen"

